[package]
name = "intiface-cli"
version = "60.0.0"
authors = ["Nonpolynomial Labs, LLC <kyle@nonpolynomial.com>"]
description = "Command Line Interface frontend for the Buttplug sex toy control library"
license = "BSD-3-Clause"
homepage = "http://intiface.com"
repository = "https://github.com/intiface/intiface-cli-rs.git"
readme = "README.md"
keywords = ["usb", "serial", "hardware", "bluetooth", "teledildonics"]
edition = "2021"
exclude = [".vscode/**"]

[dependencies]
intiface-engine = "3.0.4"
argh = "0.1.12"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing = "0.1.40"
tokio = { version = "1.40.0", features = ["sync", "rt-multi-thread", "macros", "io-std", "fs", "signal", "io-util"] }
getset = "0.1.3"

[build-dependencies]
vergen-gitcl = {version = "1.0.1", features = ["build"]}
anyhow = "1.0.89"